--- a/content/news/2024-08-06.md
+++ b/content/news/2024-08-06.md
@@ -3,7 +3,7 @@ title: Ausflug zum Bundesliga Spiel beim TC Großhesselohe
 date: "2024-08-06"
 ---
 
-{{% image-section-2 imgSrc="images/news/post_2024-08-06_bundesliga-1.jpg" imgAlt="Music Mixed" imgWidth="600" %}}
+{{% image-section-2 imgSrc="images/news/post_2024-08-06_bundesliga-1.jpg" imgAlt="Bundesliga" imgWidth="600" %}}
 #### Gelungener Ausflug des ESV Deggendorf zum Tennisspiel der 1. Bundesliga beim TC Großhesselohe
 Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegenheit, als Ballkinder beim Spiel des Tennisclubs Großhesselohe gegen den TC Bredeney mitzuwirken und den Tennisstars hautnah zu begegnen.
 Die jungen Tennisfans reisten gemeinsam mit einigen Eltern und Bewohnern der Lebenshilfe nach München, wo das spannende Spiel Tabellenerster gegen Tabellenzweiter stattfand.
