Add image preview to posts

--- a/content/news/2024-01-31.md
+++ b/content/news/2024-01-31.md
@@ -1,6 +1,7 @@
 ---
 title: ESV-Skibus 2024
 date: "2024-01-31"
+preview: "images/news/post_2024-01-31_skibus.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-01-31_skibus.jpg" imgAlt="Skibus" imgWidth="500" %}}
