--- a/content/news/2024-04-20.md
+++ b/content/news/2024-04-20.md
@@ -1,6 +1,7 @@
 ---
 title: Spielenachmittag beim ESV
 date: "2024-04-20"
+preview: "images/news/post_2024-04-20_spielenachmittag.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-04-20_spielenachmittag.jpg" imgAlt="Spielenachmittag" imgWidth="320" %}}
