--- a/content/news/2024-04-29.md
+++ b/content/news/2024-04-29.md
@@ -1,6 +1,7 @@
 ---
 title: Saisonvorbereitung der ESV-Jugend
 date: "2024-04-29"
+preview: "images/news/post_2024-04-29_saisonvorbereitung.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-04-29_saisonvorbereitung.jpg" imgAlt="Saisonvorbereitung" imgWidth="400" %}}
