--- a/content/news/2024-05-06.md
+++ b/content/news/2024-05-06.md
@@ -1,6 +1,7 @@
 ---
 title: Mascherlturnier beim ESV
 date: "2024-05-06"
+preview: "images/news/post_2024-05-06_mascherlturnier.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-05-06_mascherlturnier.jpg" imgAlt="Mascherlturnier" imgWidth="800" %}}
