--- a/content/news/2024-05-20.md
+++ b/content/news/2024-05-20.md
@@ -1,6 +1,7 @@
 ---
 title: Tag des ESV
 date: "2024-05-20"
+preview: "images/news/post_2024-05-20_tag-des-esv-4.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-05-20_tag-des-esv-1.jpg" imgAlt="Tag des ESV" imgWidth="400" %}}
