--- a/content/news/2024-07-22.md
+++ b/content/news/2024-07-22.md
@@ -1,6 +1,7 @@
 ---
 title: Abschlussfeier Knaben/Mädchen
 date: "2024-07-22"
+preview: "images/news/post_2024-07-22_kinder.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-07-22_kinder.jpg" imgAlt="Abschlussfeier" imgWidth="400" %}}
