--- a/content/news/2024-08-06.md
+++ b/content/news/2024-08-06.md
@@ -1,6 +1,7 @@
 ---
 title: Ausflug zum Bundesliga Spiel beim TC Großhesselohe
 date: "2024-08-06"
+preview: "images/news/post_2024-08-06_bundesliga-1.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-06_bundesliga-1.jpg" imgAlt="Bundesliga" imgWidth="600" %}}
