--- a/content/news/2024-08-10.md
+++ b/content/news/2024-08-10.md
@@ -1,6 +1,7 @@
 ---
 title: Optimales Saisonergebnis der ESV-Jugend
 date: "2024-08-10"
+preview: "images/news/post_2024-08-10_jugend.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-10_jugend.jpg" imgAlt="U8-1" imgWidth="600" %}}
