--- a/content/news/2024-08-18.md
+++ b/content/news/2024-08-18.md
@@ -1,6 +1,7 @@
 ---
 title: 5. ESV Pub-Quiz
 date: "2024-08-18"
+preview: "images/news/post_2024-08-18_pubquiz.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-18_pubquiz.jpg" imgAlt="Pub-Quiz" imgWidth="600" %}}
