--- a/content/news/2024-02-02.md
+++ b/content/news/2024-02-02.md
@@ -1,6 +1,7 @@
 ---
 title: Neues Vorstandsteam beim ESV
 date: "2024-02-02"
+preview: "images/news/post_2024-02-02_vorstandschaft.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-02-02_vorstandschaft.jpg" imgAlt="Vorstandschaft" imgWidth="400" %}}
