--- a/content/news/2024-04-28.md
+++ b/content/news/2024-04-28.md
@@ -1,6 +1,7 @@
 ---
 title: Saisonabschluss der Wintergymnastik
 date: "2024-04-28"
+preview: "images/news/post_2024-04-28_gymnastik.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-04-28_gymnastik.jpg" imgAlt="Wintergymnastik" imgWidth="380" %}}
