--- a/content/news/2024-07-24.md
+++ b/content/news/2024-07-24.md
@@ -1,6 +1,7 @@
 ---
 title: Fränkische Sommernacht beim ESV
 date: "2024-07-24"
+preview: "images/news/post_2024-07-24_sommernacht.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-07-24_sommernacht.jpg" imgAlt="Fränkische Sommernacht" imgWidth="400" %}}
