--- a/content/news/2024-07-28.md
+++ b/content/news/2024-07-28.md
@@ -1,6 +1,7 @@
 ---
 title: Music Mixed beim ESV
 date: "2024-07-28"
+preview: "images/news/post_2024-07-28_musicmixed-1.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-07-28_musicmixed-1.jpg" imgAlt="Music Mixed" imgWidth="400" %}}
