--- a/content/news/2024-08-15.md
+++ b/content/news/2024-08-15.md
@@ -1,6 +1,7 @@
 ---
 title: Sommer-Tennis-Freizeit-Camp beim ESV
 date: "2024-08-15"
+preview: "images/news/post_2024-08-15_sommer-camp.jpg"
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-15_sommer-camp.jpg" imgAlt="Sommer-Camp" imgWidth="600" %}}
