--- a/content/news/2024-07-28.md
+++ b/content/news/2024-07-28.md
@@ -2,6 +2,7 @@
 title: Music Mixed beim ESV
 date: "2024-07-28"
 preview: "images/news/post_2024-07-28_musicmixed-1.jpg"
+summary: Am Samstag, den 27.07.2024, fand unser alljährliches Music-Mixed statt. Bei Temperaturen über 30 Grad lieferten sich die 12 Teilnehmer enge und spannende Matches.
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-07-28_musicmixed-1.jpg" imgAlt="Music Mixed" imgWidth="400" %}}
