--- a/content/news/2024-04-20.md
+++ b/content/news/2024-04-20.md
@@ -2,6 +2,7 @@
 title: Spielenachmittag beim ESV
 date: "2024-04-20"
 preview: "images/news/post_2024-04-20_spielenachmittag.jpg"
+summary: Noch kurz vor dem offiziellen Saisonstart trafen wir uns am Freitag, den 12. April zum Spielenachmittag im Vereinsheim. Wegen des fantastischen Wetters wurde dann direkt ins Freie verlegt und gestärkt mit Chips & Co. hatten wir bei Risiko, Looping Louie, Wikingerschach oder einfach Abhängen in der Korbschaukel eine gute Zeit.
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-04-20_spielenachmittag.jpg" imgAlt="Spielenachmittag" imgWidth="320" %}}
