--- a/content/news/2024-08-06.md
+++ b/content/news/2024-08-06.md
@@ -2,16 +2,15 @@
 title: Ausflug zum Bundesliga Spiel beim TC Großhesselohe
 date: "2024-08-06"
 preview: "images/news/post_2024-08-06_bundesliga-1.jpg"
+summary: Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegenheit, als Ballkinder beim Spiel des Tennisclubs Großhesselohe gegen den TC Bredeney mitzuwirken und den Tennisstars hautnah zu begegnen.
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-06_bundesliga-1.jpg" imgAlt="Bundesliga" imgWidth="600" %}}
 #### Gelungener Ausflug des ESV Deggendorf zum Tennisspiel der 1. Bundesliga beim TC Großhesselohe
 
-Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegenheit, als Ballkinder beim Spiel des Tennisclubs Großhesselohe gegen den TC Bredeney mitzuwirken und den Tennisstars hautnah zu begegnen.
-Die jungen Tennisfans reisten gemeinsam mit einigen Eltern und Bewohnern der Lebenshilfe nach München, wo das spannende Spiel Tabellenerster gegen Tabellenzweiter stattfand.
-Mit großem Engagement meisterten sie ihre Aufgabe und sorgten dafür, dass die Bälle schnell und präzise zu den Spielern gelangten. Alle ESV-Mitglieder waren Zeugen von spannenden Spielen, wobei vier der sechs Partien sogar in den Matchtiebreak gingen und Großhesselohe sich insgesamt über ein Unentschieden freuen konnte.
-Die Begeisterung kannte keine Grenzen, als die jungen Ballkinder Tennisprofis wie zum Beispiel Jozef Kovalik oder dem Top-Doppelspezialisten Constantin Frantzen hautnah begegnen konnten.
-Für die Kinder des ESV Deggendorf war dieser Ausflug eine einzigartige Erfahrung, die ihre Liebe zum Tennis weiter entfachte und sie motivierte, ihren sportlichen Weg fortzusetzen. Das Engagement der Organisatoren um Jugendleiter Matthias Hanauer und die Unterstützung der Eltern trugen dazu bei, dass dieser Tag zu einem wahren Highlight wurde.
+Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegenheit, als Ballkinder beim Spiel des Tennisclubs Großhesselohe gegen den TC Bredeney mitzuwirken und den Tennisstars hautnah zu begegnen. Die jungen Tennisfans reisten gemeinsam mit einigen Eltern und Bewohnern der Lebenshilfe nach München, wo das spannende Spiel Tabellenerster gegen Tabellenzweiter stattfand. Mit großem Engagement meisterten sie ihre Aufgabe und sorgten dafür, dass die Bälle schnell und präzise zu den Spielern gelangten. Alle ESV-Mitglieder waren Zeugen von spannenden Spielen, wobei vier der sechs Partien sogar in den Matchtiebreak gingen und Großhesselohe sich insgesamt über ein Unentschieden freuen konnte.
+
+Die Begeisterung kannte keine Grenzen, als die jungen Ballkinder Tennisprofis wie zum Beispiel Jozef Kovalik oder dem Top-Doppelspezialisten Constantin Frantzen hautnah begegnen konnten. Für die Kinder des ESV Deggendorf war dieser Ausflug eine einzigartige Erfahrung, die ihre Liebe zum Tennis weiter entfachte und sie motivierte, ihren sportlichen Weg fortzusetzen. Das Engagement der Organisatoren um Jugendleiter Matthias Hanauer und die Unterstützung der Eltern trugen dazu bei, dass dieser Tag zu einem wahren Highlight wurde.
 {{% /image-section-2 %}}
 
 {{% image-only-section %}}
