--- a/content/news/2024-08-10.md
+++ b/content/news/2024-08-10.md
@@ -2,6 +2,7 @@
 title: Optimales Saisonergebnis der ESV-Jugend
 date: "2024-08-10"
 preview: "images/news/post_2024-08-10_jugend.jpg"
+summary: Die Jugendmannschaften des ESV Deggendorf haben sich in der Sommerrunde überdurchschnittlich gut geschlagen. Es wurde sogar ein Meistertitel in der U8 erreicht.
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-10_jugend.jpg" imgAlt="U8-1" imgWidth="600" %}}
