--- a/content/news/2024-08-18.md
+++ b/content/news/2024-08-18.md
@@ -2,6 +2,7 @@
 title: 5. ESV Pub-Quiz
 date: "2024-08-18"
 preview: "images/news/post_2024-08-18_pubquiz.jpg"
+summary: Am vergangenen Mittwoch fand wieder einmal unser legendäres ESV Pub-Quiz statt. Bereits zum fünften Mal konnten die Mitglieder des ESV Deggendorf, sowie Freunde und Bekannte dieser, bei verschiedenen Fragen ihr Wissen unter Beweis stellen.
 ---
 
 {{% image-section-2 imgSrc="images/news/post_2024-08-18_pubquiz.jpg" imgAlt="Pub-Quiz" imgWidth="600" %}}
