Shorten summary of posts

--- a/content/posts/2023-12-20.md
+++ b/content/posts/2023-12-20.md
@@ -2,7 +2,7 @@
 title: Weihnachtszeit beim ESV
 date: "2023-12-20"
 preview: "images/posts/post_2023-12-20_weihnachtszeit.jpg"
-summary: Während die Tennisplätze des ESV Deggendorf, bewacht von der weihnachtlich beleuchteten ESV-Lok, unter einer dicken Schneedecke liegen, könnte man meinen beim ESV ist derzeit nichts los, aber weit gefehlt.
+summary: Während die Tennisplätze des ESV Deggendorf, bewacht von der weihnachtlich beleuchteten ESV-Lok, unter einer dicken Schneedecke liegen, könnte man meinen beim ESV ist derzeit nichts los, ...
 ---
 
 Während die Tennisplätze des ESV Deggendorf, bewacht von der weihnachtlich beleuchteten ESV-Lok, unter einer dicken Schneedecke liegen, könnte man meinen beim ESV ist derzeit nichts los, aber weit gefehlt. Auch im Winter pulsiert das Vereinsleben, derzeit mit vorweihnachtlichen Veranstaltungen.
