--- a/content/posts/2024-02-02.md
+++ b/content/posts/2024-02-02.md
@@ -2,7 +2,7 @@
 title: Neues Vorstandsteam beim ESV
 date: "2024-02-02"
 preview: "images/posts/post_2024-02-02_vorstandschaft.jpg"
-summary: Am 20.10.2023 fand unsere Jahreshauptversammlung statt, über die wir Euch gerne kurz informieren möchten. Zu den Tagesordnungspunkten, u.a. Berichte der jeweiligen Sparten, Bestätigung der Satzungsänderung und Ehrung für langjährige Mitglieder, stand zusätzlich die Neuwahl der Vorstandschaft auf dem Programm.
+summary: Am 20.10.2023 fand unsere Jahreshauptversammlung statt, über die wir Euch gerne kurz informieren möchten. Zu den Tagesordnungspunkten, u.a. Berichte der jeweiligen Sparten, Bestätigung de...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-02-02_vorstandschaft.jpg" imgAlt="Vorstandschaft" imgWidth="400" %}}
