--- a/content/posts/2024-04-28.md
+++ b/content/posts/2024-04-28.md
@@ -2,7 +2,7 @@
 title: Saisonabschluss der Wintergymnastik
 date: "2024-04-28"
 preview: "images/posts/post_2024-04-28_gymnastik.jpg"
-summary: Immer wieder donnerstags von 18:00-19:00 Uhr finden von Anfang Oktober bis Ende April die Fitness- und Gymnastikstunden des ESV in der neuen Turnhalle der Grundschule St. Martin statt.
+summary: Immer wieder donnerstags von 18:00-19:00 Uhr finden von Anfang Oktober bis Ende April die Fitness- und Gymnastikstunden des ESV in der neuen Turnhalle der Grundschule St. Martin statt. Vo...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-04-28_gymnastik.jpg" imgAlt="Wintergymnastik" imgWidth="380" %}}
