--- a/content/posts/2024-05-06.md
+++ b/content/posts/2024-05-06.md
@@ -2,7 +2,7 @@
 title: Mascherlturnier beim ESV
 date: "2024-05-06"
 preview: "images/posts/post_2024-05-06_mascherlturnier.jpg"
-summary: Die offizielle Eröffnung der Tennisplätze erfolgte bei herrlichem Sonnenschein traditionell mit dem ESV-Mascherlturnier am 01.05.2024, das von Spielleiter Ralf Glettler und seiner Frau Doris organisiert wurde.
+summary: Die offizielle Eröffnung der Tennisplätze erfolgte bei herrlichem Sonnenschein traditionell mit dem ESV-Mascherlturnier am 01.05.2024, das von Spielleiter Ralf Glettler und seiner Frau Do...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-05-06_mascherlturnier.jpg" imgAlt="Mascherlturnier" imgWidth="800" %}}
