--- a/content/posts/2024-05-20.md
+++ b/content/posts/2024-05-20.md
@@ -2,7 +2,7 @@
 title: Tag des ESV
 date: "2024-05-20"
 preview: "images/posts/post_2024-05-20_tag-des-esv-4.jpg"
-summary: Am Samstag, den 18. Mai 2024, fand wieder einmal unser traditioneller „Tag des ESV“ auf unserer schönen Vereinsanlage statt. Wie jedes Jahr war für alle - egal ob groß oder klein - einiges geboten.
+summary: Am Samstag, den 18. Mai 2024, fand wieder einmal unser traditioneller „Tag des ESV“ auf unserer schönen Vereinsanlage statt. Wie jedes Jahr war für alle - egal ob groß oder klein - einige...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-05-20_tag-des-esv-1.jpg" imgAlt="Tag des ESV" imgWidth="400" %}}
