--- a/content/posts/2024-07-22.md
+++ b/content/posts/2024-07-22.md
@@ -2,7 +2,7 @@
 title: Abschlussfeier Knaben/Mädchen
 date: "2024-07-22"
 preview: "images/posts/post_2024-07-22_kinder.jpg"
-summary: Nach erfolgreicher Verbandsrunde hat sich am Wochenende die Knaben-/Mädchenmannschaft getroffen, um die gut gefüllte Mannschaftskasse auf den Kopf zu hauen. Mannschaftsbetreuer Andi Pompl bedankte sich beim Team, das ihm die Organisation immer leicht gemacht hatte.
+summary: Nach erfolgreicher Verbandsrunde hat sich am Wochenende die Knaben-/Mädchenmannschaft getroffen, um die gut gefüllte Mannschaftskasse auf den Kopf zu hauen. Mannschaftsbetreuer Andi Pompl...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-07-22_kinder.jpg" imgAlt="Abschlussfeier" imgWidth="400" %}}
