--- a/content/posts/2024-08-06.md
+++ b/content/posts/2024-08-06.md
@@ -2,7 +2,7 @@
 title: Ausflug zum Bundesliga Spiel beim TC Großhesselohe
 date: "2024-08-06"
 preview: "images/posts/post_2024-08-06_bundesliga-1.jpg"
-summary: Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegenheit, als Ballkinder beim Spiel des Tennisclubs Großhesselohe gegen den TC Bredeney mitzuwirken und den Tennisstars hautnah zu begegnen.
+summary: Ein fester Bestandteil der ESV-Jugendarbeit ist der aktive Einsatz einiger ESV-Kinder und Jugendlicher bei einem Tennisspiel der 1. Bundesliga. 12 Jugendliche hatten die einmalige Gelegen...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-08-06_bundesliga-1.jpg" imgAlt="Bundesliga" imgWidth="600" %}}
