--- a/content/posts/2024-08-15.md
+++ b/content/posts/2024-08-15.md
@@ -2,7 +2,7 @@
 title: Sommer-Tennis-Freizeit-Camp beim ESV
 date: "2024-08-15"
 preview: "images/posts/post_2024-08-15_sommer-camp.jpg"
-summary: Das erste Sommer-Tennis-Freizeit-Camp für ESV-Kinder war ein voller Erfolg. Bei idealen Wetterbedingungen erlebten die 35 jungen Teilnehmer im Alter von 5 bis 15 Jahren vier unvergessliche Tage voller Spiel, Spaß und sportlicher Herausforderungen.
+summary: Das erste Sommer-Tennis-Freizeit-Camp für ESV-Kinder war ein voller Erfolg. Bei idealen Wetterbedingungen erlebten die 35 jungen Teilnehmer im Alter von 5 bis 15 Jahren vier unvergesslich...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-08-15_sommer-camp.jpg" imgAlt="Sommer-Camp" imgWidth="600" %}}
