--- a/content/posts/2024-08-31.md
+++ b/content/posts/2024-08-31.md
@@ -2,7 +2,7 @@
 title: Abschlussfeier der U8-3
 date: "2024-08-31"
 preview: "images/posts/post_2024-08-31_abschlussfeier-u8.jpg"
-summary: Pünktlich zum Ferienanfang feierte die U8 III des ESV Deggendorf ihren Saisonabschluss. Nach einem Minigolfmatch auf der neuen Anlage im Deggendorfer Stadtpark gab es bei sommerlichen Temperaturen noch ein kleines Beachsoccer-Probespiel.
+summary: Pünktlich zum Ferienanfang feierte die U8 III des ESV Deggendorf ihren Saisonabschluss. Nach einem Minigolfmatch auf der neuen Anlage im Deggendorfer Stadtpark gab es bei sommerlichen Tem...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-08-31_abschlussfeier-u8.jpg" imgAlt="Abschlussfeier U8" imgWidth="600" %}}
