--- a/content/posts/2024-09-16.md
+++ b/content/posts/2024-09-16.md
@@ -2,7 +2,7 @@
 title: Abschlussfeier der Bambini und Bambina
 date: "2024-09-16"
 preview: "images/posts/post_2024-09-16_abschlussfeier-bambina.jpg"
-summary: Gelungener Saisonabschluss nach hervorragender Vizemeisterschaft. Auch die Bambina-Mädels mit ihrer Betreuerin Susanne Hanauer trafen sich zu einem gemeinsamen Saisonabschluss an einem sonnigen Nachmittag.
+summary: Gelungener Saisonabschluss nach hervorragender Vizemeisterschaft. Auch die Bambina-Mädels mit ihrer Betreuerin Susanne Hanauer trafen sich zu einem gemeinsamen Saisonabschluss an einem so...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-09-16_abschlussfeier-bambina.jpg" imgAlt="Bambina" imgWidth="400" %}}
