--- a/content/posts/2024-01-31.md
+++ b/content/posts/2024-01-31.md
@@ -2,7 +2,7 @@
 title: ESV-Skibus 2024
 date: "2024-01-31"
 preview: "images/posts/post_2024-01-31_skibus.jpg"
-summary: I wui nur Ski foahn heißt es jedes Jahr aufs Neue beim ESV Deggendorf. Auch im Jahr 2024 machte sich ein ganzer Bus voll begeisterter Skifahrer des ESV Deggendorf auf den Weg in die Berge.
+summary: I wui nur Ski foahn heißt es jedes Jahr aufs Neue beim ESV Deggendorf. Auch im Jahr 2024 machte sich ein ganzer Bus voll begeisterter Skifahrer des ESV Deggendorf auf den Weg in die Berge...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-01-31_skibus.jpg" imgAlt="Skibus" imgWidth="500" %}}
