--- a/content/posts/2024-04-29.md
+++ b/content/posts/2024-04-29.md
@@ -2,7 +2,7 @@
 title: Saisonvorbereitung der ESV-Jugend
 date: "2024-04-29"
 preview: "images/posts/post_2024-04-29_saisonvorbereitung.jpg"
-summary: Am Samstag, dem 27.04.2024, von 10:00-15:00 Uhr fand ein Trainingstag für alle Mitglieder unter 18 Jahren statt, den das Jugendteam unter der Leitung von Matthias Hanauer organisierte. Rund 40 Kinder und Jugendliche aller Altersgruppen nahmen daran teil.
+summary: Am Samstag, dem 27.04.2024, von 10:00-15:00 Uhr fand ein Trainingstag für alle Mitglieder unter 18 Jahren statt, den das Jugendteam unter der Leitung von Matthias Hanauer organisierte. Ru...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-04-29_saisonvorbereitung.jpg" imgAlt="Saisonvorbereitung" imgWidth="400" %}}
