--- a/content/posts/2024-07-24.md
+++ b/content/posts/2024-07-24.md
@@ -2,7 +2,7 @@
 title: Fränkische Sommernacht beim ESV
 date: "2024-07-24"
 preview: "images/posts/post_2024-07-24_sommernacht.jpg"
-summary: Am Freitag, den 19.07.2024 lud das Veranstaltungsteam zur fränkischen Sommernacht ein. Etwa 100 ESV-Mitglieder und Freunde des Vereins folgten der Einladung und ließen sich original fränkische Bratwürste im Weckla oder mit Sauerkraut und Kartoffelsalat schmecken.
+summary: Am Freitag, den 19.07.2024 lud das Veranstaltungsteam zur fränkischen Sommernacht ein. Etwa 100 ESV-Mitglieder und Freunde des Vereins folgten der Einladung und ließen sich original fränk...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-07-24_sommernacht.jpg" imgAlt="Fränkische Sommernacht" imgWidth="400" %}}
