--- a/content/posts/2024-09-09.md
+++ b/content/posts/2024-09-09.md
@@ -2,7 +2,7 @@
 title: VIELEN DANK für die Unterstützung
 date: "2024-09-09"
 preview: "images/posts/post_2024-09-09_partner-lok.jpg"
-summary: Die ESV Partner-Lok hängt nun offiziell seit Juli im Vereinsheims des ESV Deggendorf. Auf dem großen Wahrzeichen des Vereins sind Partner des ESV Deggendorf zu sehen, die den Eisenbahner Verein teilweise seit sehr vielen Jahren unterstützen.
+summary: Die ESV Partner-Lok hängt nun offiziell seit Juli im Vereinsheims des ESV Deggendorf. Auf dem großen Wahrzeichen des Vereins sind Partner des ESV Deggendorf zu sehen, die den Eisenbahner...
 ---
 
 {{% image-section-2 imgSrc="images/posts/post_2024-09-09_partner-lok.jpg" imgAlt="ESV Partner-Lok" imgWidth="400" %}}
